--- a/.gitattributes
+++ b/.gitattributes
@@ -1,17 +1,13 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+<!DOCTYPE html>
+<html>	
+	<head>
+		<meta charset = "utf-8"/>
+		
+	</head>
+	<body>
 
-# Custom for Visual Studio
-*.cs     diff=csharp
+	</body>
+	<script>
 
-# Standard to msysgit
-*.doc	 diff=astextplain
-*.DOC	 diff=astextplain
-*.docx diff=astextplain
-*.DOCX diff=astextplain
-*.dot  diff=astextplain
-*.DOT  diff=astextplain
-*.pdf  diff=astextplain
-*.PDF	 diff=astextplain
-*.rtf	 diff=astextplain
-*.RTF	 diff=astextplain
+	</script>
+</html>
